Fix arrow alignement and transparency

--- a/lol-analysis/src/app/components/counter/counter.component.css
+++ b/lol-analysis/src/app/components/counter/counter.component.css
@@ -4,7 +4,7 @@ div.card:hover {
 .block {
     height: 160px;
 }
-.block2:before {
+.block:before {
 content: "";
 display: inline-block;
 vertical-align: middle;
